--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,21 @@
 
 
 /* CONTENT  */ 
+
+#app{
+    width: 30%;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.email{
+    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 400px) {
+
+    #app{
+        width: 75%;
+    }
+    
+}
